fix picture alignment to center and add a fade backdrop

--- a/public/css/homepage/app.css
+++ b/public/css/homepage/app.css
@@ -25,6 +25,26 @@ img {
   max-width: 100%;
   max-height: 100%; }
 
+.backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 1;
+  display: flex; }
+  .backdrop a {
+    margin: auto; }
+    .backdrop a img {
+      max-width: 210px;
+      max-height: 140px; }
+
+.picture {
+  position: relative;
+  background-size: auto 140px;
+  background-repeat: repeat-x; }
+
 header {
   background-color: #1abc9c;
   color: white;
@@ -35,13 +55,31 @@ header {
     color: white;
     text-decoration: none;
     font-size: 29px;
-    font-weight: bold; }
+    font-weight: bold;
+    line-height: 50px; }
 
 .body {
   overflow-y: auto;
   height: calc(100vh - 55px);
   position: relative; }
 
+/*Scroll bar*/
+::-webkit-scrollbar-track {
+  border-radius: 7px;
+  background-color: #F5F5F5; }
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  background-color: #F5F5F5; }
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #1abc9c; }
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #16a085; }
+
+/*End scroll bar*/
 .menu a {
   text-decoration: none;
   color: white; }
